# discrete-llm-amc

./: .gitignore  README.md  install_dep.sh  pyproject.toml  unsloth_requirements.sh  unsloth_vllm.sh
notebooks/: autoencoder.ipynb  classifier.ipynb  llm_inference.ipynb  simple_spec_autoencoder.ipynb  spectogram.ipynb  vit-mae.ipynb
papers/ieee_letter/: Balanced-Prompt EN.csv  Bins.csv  Results - 08_01_25.xlsx  egbib.bib  ktop.csv  wcl_letter.aux  wcl_letter.bbl  wcl_letter.blg  wcl_letter.fdb_latexmk  wcl_letter.fls  wcl_letter.tex
papers/wocc/: conference_101719.tex  egbib.bib  results.csv  results.xlsx
src/data/: __init__.py  baseline.py  data_processing.py  generated_dataset.py  radioml.py  sfa.py  templates.py  visualization.py
src/evaluation/: gemini_googleai.py  gpt_openai.py  test.py  unsloth_eval.py  utils.py
src/spectrogram/: autoencoder_training.py  autoencoder_vit.py  classifier_training.py  constants.py  data_loader.py  dino_training.sh  processing.py
